@@ -1,3 +1,8 @@
+2007-01-08  Kouhei Sutou  <kou@cozmixng.org>
+
+	* samples/text2.rb (render_layout): used
+	Pango::LayoutIter#line_extents and Pango::LayoutIter#line_yrange.
+
 2007-01-02  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext/rb_cairo_context.c: cached Ruby object for
